// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As a developer, I can generate graphql mutation for create entity by table schema should generate graphql tag for create mutation by common table schema  1`] = `
"
  mutation DataViewerCommonsRowCreate($data: CommonCreateInput!) {
    commonCreate(data: $data) {
      id
      field1
      field2
      field3
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for create entity by table schema should generate graphql tag for create mutation by table schema with files 1`] = `
"
  mutation DataViewerFilesRowCreate($data: FileCreateInput!) {
    fileCreate(data: $data) {
      id
      file {
        id
        fileId
        filename
        downloadUrl
        shareUrl
        meta
      }
      fileList {
        items {
          id
          fileId
          filename
          downloadUrl
          shareUrl
          meta
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for create entity by table schema should generate graphql tag for create mutation by table schema with relation 1`] = `
"
  mutation DataViewerRelationRowCreate($data: RelationCreateInput!) {
    relationCreate(data: $data) {
      id
      field1 {
        id
        _description
      }
      field2
      field3
      field4 {
        items {
          id
          _description
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for create entity by table schema should generate graphql tag for create mutation by table schema with smart fields 1`] = `
"
  mutation DataViewerSmartFieldsRowCreate($data: SmartFieldCreateInput!) {
    smartFieldCreate(data: $data) {
      id
      phone {
        code
        number
      }
      address {
        street1
        street2
        zip
        city
        state
      }
      phoneList {
        code
        number
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for create entity by table schema should generate graphql tag for create mutation by table schema with smart fields 2`] = `
"
  mutation DataViewerTableWithoutUserFieldsRowCreate {
    tableWithoutUserFieldCreate {
      id
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for delete entity by table schema should generate graphql tag for delete mutation by common table schema  1`] = `
"
  mutation DataViewerCommonsRowDelete($filter: CommonKeyFilter!, $force: Boolean) {
    commonDelete(filter: $filter, force: $force) {
      success
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for delete entity by table schema should generate graphql tag for delete mutation by table schema with files 1`] = `
"
  mutation DataViewerFilesRowDelete($filter: FileKeyFilter!, $force: Boolean) {
    fileDelete(filter: $filter, force: $force) {
      success
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for delete entity by table schema should generate graphql tag for delete mutation by table schema with relation 1`] = `
"
  mutation DataViewerRelationRowDelete($filter: RelationKeyFilter!, $force: Boolean) {
    relationDelete(filter: $filter, force: $force) {
      success
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for delete entity by table schema should generate graphql tag for delete mutation by table schema with smart fields 1`] = `
"
  mutation DataViewerSmartFieldsRowDelete($filter: SmartFieldKeyFilter!, $force: Boolean) {
    smartFieldDelete(filter: $filter, force: $force) {
      success
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for update entity by table schema should generate graphql tag for update mutation by common table schema  1`] = `
"
  mutation DataViewerCommonsRowUpdate($data: CommonUpdateInput!, $filter: CommonKeyFilter) {
    commonUpdate(data: $data, filter: $filter) {
      id
      field1
      field2
      field3
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for update entity by table schema should generate graphql tag for update mutation by table schema with files 1`] = `
"
  mutation DataViewerFilesRowUpdate($data: FileUpdateInput!, $filter: FileKeyFilter) {
    fileUpdate(data: $data, filter: $filter) {
      id
      file {
        id
        fileId
        filename
        downloadUrl
        shareUrl
        meta
      }
      fileList {
        items {
          id
          fileId
          filename
          downloadUrl
          shareUrl
          meta
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for update entity by table schema should generate graphql tag for update mutation by table schema with relation 1`] = `
"
  mutation DataViewerRelationRowUpdate($data: RelationUpdateInput!, $filter: RelationKeyFilter) {
    relationUpdate(data: $data, filter: $filter) {
      id
      field1 {
        id
        _description
      }
      field2
      field3
      field4 {
        items {
          id
          _description
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql mutation for update entity by table schema should generate graphql tag for update mutation by table schema with smart fields 1`] = `
"
  mutation DataViewerSmartFieldsRowUpdate($data: SmartFieldUpdateInput!, $filter: SmartFieldKeyFilter) {
    smartFieldUpdate(data: $data, filter: $filter) {
      id
      phone {
        code
        number
      }
      address {
        street1
        street2
        zip
        city
        state
      }
      phoneList {
        code
        number
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql query for list by table schema should generate graphql tag for the table content by common table schema  1`] = `
"
  query CommonsTableContent(
    $filter: CommonFilter
    $orderBy: [CommonOrderBy]
    $after: String
    $before: String
    $first: Int
    $last: Int
    $skip: Int
  ) {
    commonsList(
      filter: $filter
      orderBy: $orderBy
      after: $after
      before: $before
      first: $first
      last: $last
      skip: $skip
    ) {
      items {
        id
        field1
        field2
        field3
        _description
      }
      count
    }
  }"
`;

exports[`As a developer, I can generate graphql query for list by table schema should generate graphql tag for the table content by table schema with files 1`] = `
"
  query FilesTableContent(
    $filter: FileFilter
    $orderBy: [FileOrderBy]
    $after: String
    $before: String
    $first: Int
    $last: Int
    $skip: Int
  ) {
    filesList(
      filter: $filter
      orderBy: $orderBy
      after: $after
      before: $before
      first: $first
      last: $last
      skip: $skip
    ) {
      items {
        id
        file {
          id
          fileId
          filename
          downloadUrl
          shareUrl
          meta
        }
        fileList {
          items {
            id
            fileId
            filename
            downloadUrl
            shareUrl
            meta
          }
          count
        }
        _description
      }
      count
    }
  }"
`;

exports[`As a developer, I can generate graphql query for list by table schema should generate graphql tag for the table content by table schema with relation 1`] = `
"
  query RelationTableContent(
    $filter: RelationFilter
    $orderBy: [RelationOrderBy]
    $after: String
    $before: String
    $first: Int
    $last: Int
    $skip: Int
  ) {
    relationsList(
      filter: $filter
      orderBy: $orderBy
      after: $after
      before: $before
      first: $first
      last: $last
      skip: $skip
    ) {
      items {
        id
        field1 {
          id
          _description
        }
        field2
        field3
        field4 {
          items {
            id
            _description
          }
          count
        }
        _description
      }
      count
    }
  }"
`;

exports[`As a developer, I can generate graphql query for list by table schema should generate graphql tag for the table content by table schema with smart fields 1`] = `
"
  query SmartFieldsTableContent(
    $filter: SmartFieldFilter
    $orderBy: [SmartFieldOrderBy]
    $after: String
    $before: String
    $first: Int
    $last: Int
    $skip: Int
  ) {
    smartFieldsList(
      filter: $filter
      orderBy: $orderBy
      after: $after
      before: $before
      first: $first
      last: $last
      skip: $skip
    ) {
      items {
        id
        id
        createdAt
        updatedAt
        createdBy {
          id
          _description
        }
        phone {
          code
          number
        }
        address {
          street1
          street2
          zip
          city
          state
        }
        phoneList {
          code
          number
        }
        _description
      }
      count
    }
  }"
`;

exports[`As a developer, I can generate graphql query for list by table schema should generate query string  1`] = `
"
  query TableSchemaTableContent(
    $filter: TableSchemaFilter
    $orderBy: [TableSchemaOrderBy]
    $after: String
    $before: String
    $first: Int
    $last: Int
    $skip: Int
  ) {
    tableSchemasList(
      filter: $filter
      orderBy: $orderBy
      after: $after
      before: $before
      first: $first
      last: $last
      skip: $skip
    ) {
      items {
        id
        number
        numberList
        relation {
          id
          _description
        }
        relationList {
          items {
            id
            _description
          }
          count
        }
        _description
      }
      count
    }
  }"
`;

exports[`As a developer, I can generate graphql query for read entity by table schema should generate graphql tag for row query by common table schema  1`] = `
"
  query DataViewerCommonsRow($id: ID!) {
    common(id: $id) {
      field1
      field2
      field3
    }
  }"
`;

exports[`As a developer, I can generate graphql query for read entity by table schema should generate graphql tag for row query by table schema with files 1`] = `
"
  query DataViewerFilesRow($id: ID!) {
    file(id: $id) {
      file {
        id
        fileId
        filename
        downloadUrl
        shareUrl
        meta
      }
      fileList {
        items {
          id
          fileId
          filename
          downloadUrl
          shareUrl
          meta
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql query for read entity by table schema should generate graphql tag for row query by table schema with relation 1`] = `
"
  query DataViewerRelationRow($id: ID!) {
    relation(id: $id) {
      field1 {
        id
        _description
      }
      field2
      field3
      field4 {
        items {
          id
          _description
        }
        count
      }
    }
  }"
`;

exports[`As a developer, I can generate graphql query for read entity by table schema should generate graphql tag for row query by table schema with smart fields 1`] = `
"
  query DataViewerSmartFieldsRow($id: ID!) {
    smartField(id: $id) {
      id
      createdAt
      updatedAt
      createdBy {
        id
        _description
      }
      phone {
        code
        number
      }
      address {
        street1
        street2
        zip
        city
        state
      }
      phoneList {
        code
        number
      }
    }
  }"
`;

exports[`As a developer, I can generate table columns  by table schema should generate table columns list  1`] = `
Array [
  Object {
    "meta": Object {
      "fieldType": "NUMBER",
      "fieldTypeAttributes": Object {
        "currency": null,
        "format": "NUMBER",
        "maxValue": null,
        "minValue": null,
        "precision": 0,
      },
      "isList": false,
    },
    "name": "numberanother",
    "title": "Numberanother",
  },
  Object {
    "meta": Object {
      "fieldType": "NUMBER",
      "fieldTypeAttributes": Object {
        "currency": null,
        "format": "NUMBER",
        "maxValue": null,
        "minValue": null,
        "precision": 0,
      },
      "isList": false,
    },
    "name": "number",
    "title": "Number",
  },
  Object {
    "meta": Object {
      "fieldType": "NUMBER",
      "fieldTypeAttributes": Object {
        "currency": null,
        "format": "NUMBER",
        "maxValue": null,
        "minValue": null,
        "precision": 0,
      },
      "isList": true,
    },
    "name": "numberList",
    "title": "NumberList",
  },
  Object {
    "meta": Object {
      "fieldType": "SMART",
      "fieldTypeAttributes": Object {
        "format": "ADDRESS",
        "innerFields": Array [
          Object {
            "description": null,
            "displayName": "Street 1",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": true,
            "isUnique": false,
            "name": "street1",
          },
          Object {
            "description": null,
            "displayName": "Street 2",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "street2",
          },
          Object {
            "description": null,
            "displayName": "Zip",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "zip",
          },
          Object {
            "description": null,
            "displayName": "City",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": true,
            "isUnique": false,
            "name": "city",
          },
          Object {
            "description": null,
            "displayName": "State",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "state",
          },
        ],
      },
      "isList": false,
    },
    "name": "address",
    "title": "Address",
  },
  Object {
    "meta": Object {
      "fieldType": "SMART",
      "fieldTypeAttributes": Object {
        "format": "ADDRESS",
        "innerFields": Array [
          Object {
            "description": null,
            "displayName": "Street 1",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": true,
            "isUnique": false,
            "name": "street1",
          },
          Object {
            "description": null,
            "displayName": "Street 2",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "street2",
          },
          Object {
            "description": null,
            "displayName": "Zip",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "zip",
          },
          Object {
            "description": null,
            "displayName": "City",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": true,
            "isUnique": false,
            "name": "city",
          },
          Object {
            "description": null,
            "displayName": "State",
            "fieldType": "TEXT",
            "fieldTypeAttributes": Object {
              "fieldSize": 255,
              "format": "UNFORMATTED",
            },
            "isList": false,
            "isRequired": false,
            "isUnique": false,
            "name": "state",
          },
        ],
      },
      "isList": true,
    },
    "name": "addresses",
    "title": "Addresses",
  },
  Object {
    "meta": Object {
      "fieldType": "TEXT",
      "fieldTypeAttributes": Object {
        "fieldSize": 100,
        "format": "UNFORMATTED",
      },
      "isList": false,
    },
    "name": "scalar",
    "title": "Scalar",
  },
  Object {
    "meta": Object {
      "fieldType": "FILE",
      "fieldTypeAttributes": Object {
        "format": "FILE",
        "maxSize": null,
        "typeRestrictions": null,
      },
      "isList": false,
    },
    "name": "file",
    "title": "File",
  },
  Object {
    "meta": Object {
      "fieldType": "FILE",
      "fieldTypeAttributes": Object {
        "format": "FILE",
        "maxSize": null,
        "typeRestrictions": null,
      },
      "isList": true,
    },
    "name": "fileList",
    "title": "FileList",
  },
  Object {
    "meta": Object {
      "fieldType": "TEXT",
      "fieldTypeAttributes": Object {
        "fieldSize": 100,
        "format": "UNFORMATTED",
      },
      "isList": true,
    },
    "name": "scalarList",
    "title": "ScalarList",
  },
  Object {
    "meta": Object {
      "fieldType": "TEXT",
      "fieldTypeAttributes": Object {
        "fieldSize": 100,
        "format": "UNFORMATTED",
      },
      "isList": false,
    },
    "name": "relation.scalar",
    "title": "relation.Scalar",
  },
  Object {
    "meta": Object {
      "fieldType": "TEXT",
      "fieldTypeAttributes": Object {
        "fieldSize": 100,
        "format": "UNFORMATTED",
      },
      "isList": true,
    },
    "name": "relation.scalarList",
    "title": "relation.ScalarList",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": false,
    },
    "name": "relation.relation",
    "title": "relation.Relation",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": true,
    },
    "name": "relation.relationList",
    "title": "relation.RelationList",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": false,
    },
    "name": "relation.nestedRelation",
    "title": "relation.NestedRelation",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": true,
    },
    "name": "relation.nestedRelationList",
    "title": "relation.NestedRelationList",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": true,
    },
    "name": "relationList",
    "title": "RelationList",
  },
]
`;

exports[`As a developer, I can generate table columns  by table schema should generate table columns list with included columns 1`] = `
Array [
  Object {
    "meta": Object {
      "fieldType": "NUMBER",
      "fieldTypeAttributes": Object {
        "currency": null,
        "format": "NUMBER",
        "maxValue": null,
        "minValue": null,
        "precision": 0,
      },
      "isList": false,
    },
    "name": "number",
    "title": "Number",
  },
  Object {
    "meta": Object {
      "fieldType": "TEXT",
      "fieldTypeAttributes": Object {
        "fieldSize": 100,
        "format": "UNFORMATTED",
      },
      "isList": true,
    },
    "name": "relation.scalarList",
    "title": "relation.ScalarList",
  },
  Object {
    "meta": Object {
      "fieldType": "RELATION",
      "fieldTypeAttributes": null,
      "isList": true,
    },
    "name": "relationList",
    "title": "RelationList",
  },
]
`;
